Complete Notes Functionality

--- a/distributed/web/app/src/components/PageLayout/PageLayout.scss
+++ b/distributed/web/app/src/components/PageLayout/PageLayout.scss
@@ -53,6 +53,6 @@
     -moz-box-shadow: -8px 0px 16px 0px rgba(0,0,0,0.08);
     box-shadow: -8px 0px 16px 0px rgba(0,0,0,0.08);
       
-    padding: 25px 50px;
+    overflow: hidden;
   }
 }
