--- a/distributed/web/app/src/scenes/Notes/components/NotesList/NotesList.scss
+++ b/distributed/web/app/src/scenes/Notes/components/NotesList/NotesList.scss
@@ -1,11 +1,11 @@
 .NotesList {
   padding-bottom: 20px;
+  overflow: scroll;
 
   .row {
     cursor: pointer;
-    padding: 20px 15px;
+    padding: 20px 10px;
     margin-right: 0px;
-    margin-left: -15px;
     border-bottom: solid 1px rgba(0,0,0,0.1);
 
     &.active {
