Serverless overhaul, apps should start in prod now (#62)
* Flow changes

* Checkpoint

* New project works

* Save

* App single view, renaming all project -> app

* Single view fixes

* Bakcend changes to follow cell change

* v0000.00.0.001

--- a/serverless/web/app/src/app/new-app/new-app.component.css
+++ b/serverless/web/app/src/app/new-app/new-app.component.css
@@ -29,9 +29,13 @@ code {
 }
 
 /* Without this the input border and padding causes the page title to be aligned
-differently on step 0 vs the rest */
+  differently on step 0 vs the rest */
 .mat-form-field-infix {
   padding-top: 0 !important;
   margin-top: 0;
   border-top: 0;
+}
+
+.full-width-field {
+  width: 100%;
 }
