--- a/blog/web/content/assets/css/main.scss
+++ b/blog/web/content/assets/css/main.scss
@@ -17,8 +17,7 @@
   font-size: 15px;
   font-weight: bold;
   padding: 50px;
-  color: #fff;
-  background-color: #0c2e47;
+  color: #0c2e47;
 }
 
 .site-footer a {
