--- a/blog/web/html/assets/css/main.css
+++ b/blog/web/html/assets/css/main.css
@@ -123,7 +123,7 @@
 
 .site-footer { font-size: 15px; font-weight: bold; padding: 50px; color: #0c2e47; }
 
-.site-footer a { color: #fff; }
+.site-footer a { color: #0c2e47; }
 
 .list-inline { margin: 0; }
 
