fix docs footer

--- a/blog/web/html/assets/css/main.css
+++ b/blog/web/html/assets/css/main.css
@@ -121,7 +121,7 @@
 
 .highlight .il { color: #009999; }
 
-.site-footer { font-size: 15px; font-weight: bold; padding: 50px; color: #0c2e47; }
+.site-footer { font-size: 15px; padding: 50px; color: #0c2e47; }
 
 .site-footer a { color: #0c2e47; }
 
