--- a/m3o/web/app/src/components/PageLayout/style.scss
+++ b/m3o/web/app/src/components/PageLayout/style.scss
@@ -11,11 +11,13 @@
     flex-direction: column;
 
     .logo {
-      margin: 60px auto;
-      width: 60px;
+      margin: 50px auto;
+      width: 90px;
     }
 
     nav {
+      flex-grow: 1;
+
       a {
         display: grid;
         grid-template-columns: 40px auto;
@@ -56,12 +58,35 @@
         }
       }
     }
+
+    .lower {
+      display: flex;
+      padding: 20px 0px;
+      margin-bottom: 5px;
+      border-top: solid 1px #00000015;
+
+      .project {
+        cursor: pointer;
+        padding: 20px;
+        margin: -20px;
+
+        p {
+          margin: 0px;
+          font-size: 10pt;
+          
+          &.descriptor {
+            font-size: 8pt;
+            color: #00000095;
+          }
+        }
+      }
+    }
   }
 
   .main {
     background-color: white;
     border-radius: 20px 0px 0px 20px;
-    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.04);
+    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.05);
     z-index: 2;
     padding: 50px;
   }
