--- a/m3o/web/app/src/index.scss
+++ b/m3o/web/app/src/index.scss
@@ -6,7 +6,7 @@ body {
   width: 100vw;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #F6F6F6;
+  background-color: #FBFDFF;
 }
 
 #root {
@@ -28,6 +28,12 @@ h2 {
   font-weight: 500;
   font-size: 15pt;
   margin: 30px 0px 30px 0px;
+}
+
+h3 {
+  font-weight: 600;
+  font-size: 12pt;
+  margin: 5px 0px 10px 0px;
 }
 
 h4 {
@@ -98,6 +104,15 @@ header {
   &.danger {
     background-color: rgba($color: $red, $alpha: 0.2);
     color: $red;
+  }
+
+  &.btn-small {
+    padding: 0px 20px;
+    height: 35px;
+
+    p {
+      margin: 0px;
+    }
   }
 }
 
