change footer color

--- a/blog/web/html/assets/css/main.css
+++ b/blog/web/html/assets/css/main.css
@@ -121,9 +121,9 @@
 
 .highlight .il { color: #009999; }
 
-.site-footer { font-size: 15px; padding: 50px; color: #0c2e47; }
+.site-footer { font-size: 15px; padding: 50px; color: #495057; }
 
-.site-footer a { color: #0c2e47; }
+.site-footer a { color: #495057; }
 
 .list-inline { margin: 0; }
 
