--- a/home/web/html/css/m.css
+++ b/home/web/html/css/m.css
@@ -16,7 +16,7 @@
 	color: #0c2e47;
 	font-weight: bold;
     }
-    .footer, .footer i, .footer a { color: #0c2e47;}
+    .footer, .footer i, .footer a { color: #495057;}
     .footer { border-top: 1px solid #eee; padding: 50px 0 50px 0; }
     .footer ul { margin: 0; }
     .main {
